--- a/css/index.css
+++ b/css/index.css
@@ -77,6 +77,7 @@ html, body {
     top: 0;
     opacity: 1;
     background: url("../img/o_1amb85hhh1rhm163tetd72at1n4e.png");
+    background-size: cover;
 }
 
 /*第一屏*/
