--- a/css/index.css
+++ b/css/index.css
@@ -56,7 +56,7 @@ html, body {
 
 .swiper-slide {
     position: relative;
-    background: url("/img/o_1amauma3ck4l1lv063b1uqt1f8q9.jpg") no-repeat;
+    background: url("../img/o_1amauma3ck4l1lv063b1uqt1f8q9.jpg") no-repeat;
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -69,14 +69,14 @@ html, body {
     opacity: 0;
 }
 
-.swiper-slide > img:nth-child(1) {
+.swiper-slide img:nth-child(1) {
     display: block;
     width: 100%;
     height: 100%;
     left: 0;
     top: 0;
     opacity: 1;
-    background: url("/img/o_1amb85hhh1rhm163tetd72at1n4e.png");
+    background: url("../img/o_1amb85hhh1rhm163tetd72at1n4e.png");
     background-size: cover;
 }
 
