--- a/css/index.css
+++ b/css/index.css
@@ -56,7 +56,7 @@ html, body {
 
 .swiper-slide {
     position: relative;
-    background: url("../img/o_1amauma3ck4l1lv063b1uqt1f8q9.jpg") no-repeat;
+    background: red no-repeat;
     background-size: cover;
     width: 100%;
     height: 100%;
