--- a/css/index.css
+++ b/css/index.css
@@ -56,7 +56,7 @@ html, body {
 
 .swiper-slide {
     position: relative;
-    background: red;
+    background: url("../img/o_1amauma3ck4l1lv063b1uqt1f8q9.jpg");
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -69,14 +69,14 @@ html, body {
     opacity: 0;
 }
 
-.swiper-slide img:nth-child(1) {
+.swiper-slide .back-img {
     display: block;
     width: 100%;
     height: 100%;
     left: 0;
     top: 0;
     opacity: 1;
-    background:red;
+    background: url("../img/o_1amb85hhh1rhm163tetd72at1n4e.png") ;
     background-size: cover;
 }
 
@@ -87,7 +87,7 @@ html, body {
 #page1 img:nth-child(2) {
     width: 1.56rem;
     height: 3.30rem;
-    left: 0.5rem;
+    left: 0.3rem;
     top: 1.28rem;
     animation: bounceInUp 1s both;
     -webkit-animation: bounceInUp 1s both;
@@ -96,7 +96,7 @@ html, body {
 #page1 img:nth-child(3) {
     width: 1.36rem;
     height: 3.00rem;
-    left:1.53rem;
+    left:1.33rem;
     top: 1.22rem;
     animation: bounceInDown 1s both;
     -webkit-animation: bounceInDown 1s both;
@@ -105,7 +105,7 @@ html, body {
 #page1 img:nth-child(4) {
     width: 1.36rem;
     height: 3.00rem;
-    left: 2.36rem;
+    left: 2.16rem;
     top: 1.90rem;
     animation: bounceInUp 1s both;
     -webkit-animation: bounceInUp 1s both;
@@ -114,7 +114,7 @@ html, body {
 #page1 img:nth-child(5) {
     width: 1.36rem;
     height: 3.00rem;
-    left: 3.32rem;
+    left: 3.12rem;
     top: 1.33rem;
     animation: bounceInDown 1s both;
     -webkit-animation: bounceInDown 1s both;
@@ -123,7 +123,7 @@ html, body {
 #page1 img:nth-child(6) {
     width: 0.5rem;
     height: 0.45rem;
-    left: 1.3rem;
+    left: 1.1rem;
     top: 2.39rem;
     animation : fadeIn 1s 1s both;
     -webkit-animation: fadeIn 1s 1s both;
@@ -132,7 +132,7 @@ html, body {
 #page1 img:nth-child(7) {
     width: 0.5rem;
     height: 0.45rem;
-    left: 1.76rem;
+    left: 1.56rem;
     top: 2.85rem;
     animation : fadeIn 1s 1.2s both;
     -webkit-animation: fadeIn 1s 1.2s both;
@@ -141,7 +141,7 @@ html, body {
 #page1 img:nth-child(8) {
     width: 0.45rem;
     height: 0.45rem;
-    left: 2.65rem;
+    left: 2.45rem;
     top: 2.66rem ;
     animation : fadeIn 1s 1.4s both;
     -webkit-animation: fadeIn 1s 1.4s both;
@@ -150,7 +150,7 @@ html, body {
 #page1 img:nth-child(9) {
     width: 0.5rem;
     height: 0.45rem;
-    left: 3.32rem;
+    left: 3.12rem;
     top: 3.09rem;
     animation: fadeIn 1s 1.6s both;
     -webkit-animation: fadeIn 1s 1.6s both;
@@ -163,7 +163,7 @@ html, body {
 #page2 img:nth-of-type(2) {
     width: 2.1rem;
     height: 1.2rem;
-    left: 1.05rem;
+    left: 0.85rem;
     top: 0.6rem;
     animation: bounceInDown 0.5s both;
     -webkit-animation: bounceInDown 0.5s both;
@@ -172,7 +172,7 @@ html, body {
 #page2 img:nth-of-type(3) {
     width: 2.4rem;
     height: 1.6rem;
-    right: 1.2rem;
+    left: 1.5rem;
     top: 4.5rem;
     animation: bounceInUp 0.5s both;
     -webkit-animation: bounceInUp 0.5s both;
@@ -183,7 +183,7 @@ html, body {
 }
 
 #page2 div:nth-of-type(1) {
-    left: 1.55rem;
+    left: 1.35rem;
     top: 1.2rem;
     animation: fadeIn 0.5s both;
     -webkit-animation: fadeIn 0.5s both;
@@ -200,56 +200,56 @@ html, body {
 }
 
 #page2 div:nth-of-type(2) {
-    left: 1.85rem;
+    left: 1.65rem;
     top: 2.1rem;
     animation: fadeInLeft 0.5s 0.3s both;
     -webkit-animation: fadeInLeft 0.5s 0.3s both;
 }
 
 #page2 div:nth-of-type(3) {
-    left: 1.85rem;
+    left: 1.65rem;
     top: 2.5rem;
     animation: fadeInLeft 0.5s 0.5s both;
     -webkit-animation: fadeInLeft 0.5s 0.5s both;
 }
 
 #page2 div:nth-of-type(4) {
-    left: 1.85rem;
+    left: 1.65rem;
     top: 2.9rem;
     animation: fadeInLeft 0.5s 0.7s both;
     -webkit-animation: fadeInLeft 0.5s 0.7s both;
 }
 
 #page2 div:nth-of-type(5) {
-    left: 1.85rem;
+    left: 1.65rem;
     top: 3.3rem;
     animation: fadeInLeft 0.5s 0.9s both;
     -webkit-animation: fadeInLeft 0.5s 0.9s both;
 }
 
 #page2 div:nth-of-type(6) {
-    left: 1.85rem;
+    left: 1.65rem;
     top: 3.7rem;
     animation: fadeInLeft 0.5s 1.1s both;
     -webkit-animation: fadeInLeft 0.5s 1.1s both;
 }
 
 #page2 div:nth-of-type(7) {
-    left: 1.85rem;
+    left: 1.65rem;
     top: 4.1rem;
     animation: fadeInLeft 0.5s 1.3s both;
     -webkit-animation: fadeInLeft 0.5s 1.3s both;
 }
 
 #page2 div:nth-of-type(8) {
-    left: 1.85rem;
+    left: 1.65rem;
     top: 4.5rem;
     animation: fadeInLeft 0.5s 1.5s both;
     -webkit-animation: fadeInLeft 0.5s 1.5s both;
 }
 
 #page2 div:nth-of-type(9) {
-    left: 1.85rem;
+    left: 1.65rem;
     top: 4.9rem;
     animation: fadeInLeft 0.5s 1.7s both;
     -webkit-animation: fadeInLeft 0.5s 1.7s both;
@@ -266,7 +266,7 @@ html, body {
 #page3 img:nth-of-type(2) {
     width: 2.0rem;
     height: 0.4rem;
-    left: 1.09rem;
+    left: 0.89rem;
     top: 1.39rem;
     animation: bounceInUp 1s both;
     -webkit-animation: bounceInUp 1s both;
@@ -275,7 +275,7 @@ html, body {
 #page3 img:nth-of-type(3) {
     width: 1.1rem;
     height: 1.6rem;
-    left: 2.41rem;
+    left: 2.21rem;
     top: 0.75rem;
     animation: bounceInRight 1s both;
     -webkit-animation: bounceInRight 1s both;
@@ -284,7 +284,7 @@ html, body {
 #page3 div:nth-of-type(1) {
     font-weight: bold;
     font-size: 0.28rem;
-    left: 1.43rem;
+    left: 1.23rem;
     top: 1.0rem;
     animation: fadeInUp 1s both;
     -webkit-animation: fadeInUp 1s both;
@@ -292,7 +292,7 @@ html, body {
 
 #page3 div:nth-of-type(2) {
     font-size: 0.14rem;
-    left: 1.41rem;
+    left: 1.21rem;
     top: 1.63rem;
     transform: rotate(11deg);
     animation: fadeIn 1s both;
@@ -300,49 +300,49 @@ html, body {
 }
 
 #page3 div:nth-of-type(3) {
-    left: 1.8rem;
+    left: 1.6rem;
     top: 2.64rem;
     animation: fadeIn 1s both;
     -webkit-animation: fadeIn 1s both;
 }
 
 #page3 div:nth-of-type(4) {
-    left: 3.04rem;
+    left: 2.84rem;
     top: 2.56rem;
     animation: fadeIn 1s 0.5s both;
     -webkit-animation: fadeIn 1s 0.5s both;
 }
 
 #page3 div:nth-of-type(5) {
-    left: 3.29rem;
+    left: 3.09rem;
     top: 3.47rem;
     animation: fadeIn 1s 1s both;
     -webkit-animation: fadeIn 1s 1s both;
 }
 
 #page3 div:nth-of-type(6) {
-    left: 2.22rem;
+    left: 2.02rem;
     top: 3.9rem;
     animation: fadeIn 1s 1.5s both;
     -webkit-animation: fadeIn 1s 1.5s both;
 }
 
 #page3 div:nth-of-type(7) {
-    left: 2.05rem;
+    left: 1.85rem;
     top: 4.44rem;
     animation: fadeIn 1s 2s both;
     -webkit-animation: fadeIn 1s 2s both;
 }
 
 #page3 div:nth-of-type(8) {
-    left: 1.95rem;
+    left: 1.75rem;
     top: 5.08rem;
     animation: fadeIn 1s 2.5s both;
     -webkit-animation: fadeIn 1s 2.5s both;
 }
 
 #page3 div:nth-of-type(9) {
-    left: 2.17rem;
+    left: 1.97rem;
     top: 5.99rem;
     animation: fadeIn 1s 3s both;
     -webkit-animation: fadeIn 1s 3s both;
@@ -356,7 +356,7 @@ html, body {
 
 #page3 p:nth-of-type(1) {
     width: 0.48rem;
-    left: 2.54rem;
+    left: 2.34rem;
     top: 2.74rem;
     transform: rotate(-10deg);
     animation: fadeIn 1s 0.25s both;
@@ -365,7 +365,7 @@ html, body {
 
 #page3 p:nth-of-type(2) {
     width: 0.64rem;
-    left: 3.22rem;
+    left: 3.02rem;
     top: 3.14rem;
     transform: rotate(80deg);
     animation: fadeIn 1s 0.75s both;
@@ -374,7 +374,7 @@ html, body {
 
 #page3 p:nth-of-type(3) {
     width: 0.68rem;
-    left: 2.6rem;
+    left: 2.4rem;
     top: 3.77rem;
     transform: rotate(-22deg);
     animation: fadeIn 1s 1.25s both;
@@ -383,7 +383,7 @@ html, body {
 
 #page3 p:nth-of-type(4) {
     width: 0.36rem;
-    left: 2.26rem;
+    left: 2.06rem;
     top: 4.34rem;
     transform: rotate(-80deg);
     animation: fadeIn 1s 1.75s both;
@@ -392,7 +392,7 @@ html, body {
 
 #page3 p:nth-of-type(5) {
     width: 0.4rem;
-    left: 2.1rem;
+    left: 1.9rem;
     top: 4.93rem;
     transform: rotate(-70deg);
     animation: fadeIn 1s 2.25s both;
@@ -401,7 +401,7 @@ html, body {
 
 #page3 p:nth-of-type(6) {
     width: 0.74rem;
-    left: 2.1rem;
+    left: 1.9rem;
     top: 5.68rem;
     transform: rotate(60deg);
     animation: fadeIn 1s 2.75s both;
@@ -415,7 +415,7 @@ html, body {
 #page4 img:nth-of-type(2) {
     width: 1.87rem;
     height: 0.93rem;
-    left: 1.55rem;
+    left: 1.35rem;
     top: 1rem;
     animation: bounceInRight 1s both;
     -webkit-animation: bounceInRight 1s both;
@@ -425,7 +425,7 @@ html, body {
 #page4 img:nth-of-type(3) {
     width: 1rem;
     height: 1.33rem;
-    left: 1.05rem;
+    left: 0.85rem;
     top: 0.72rem;
     animation: bounceInLeft 1s both;
     -webkit-animation: bounceInLeft 1s both;
@@ -435,7 +435,7 @@ html, body {
 #page4 img:nth-of-type(4) {
     width: 0.05rem;
     height: 3.54rem;
-    left:1.48rem;
+    left:1.28rem;
     top: 2.57rem;
     animation: bounceInUp 1s both;
     -webkit-animation: bounceInUp 1s both;
@@ -444,7 +444,7 @@ html, body {
 #page4 img:nth-of-type(5) {
     width: 0.5rem;
     height: 0.5rem;
-    left: 1.25rem;
+    left: 1.05rem;
     top: 2.8rem;
     animation: fadeIn 1s both;
     -webkit-animation: fadeIn 1s both;
@@ -454,7 +454,7 @@ html, body {
 #page4 img:nth-of-type(6) {
     width: 0.5rem;
     height: 0.5rem;
-    left: 1.25rem;
+    left: 1.05rem;
     top: 4.1rem;
     animation: fadeIn 1s both;
     -webkit-animation: fadeIn 1s both;
@@ -463,14 +463,14 @@ html, body {
 #page4 img:nth-of-type(7) {
     width: 0.5rem;
     height: 0.5rem;
-    left: 1.25rem;
+    left: 1.05rem;
     top: 5.4rem;
     animation: fadeIn 1s both;
     -webkit-animation: fadeIn 1s both;
 }
 
 #page4 div:nth-of-type(1) {
-    left: 2.21rem;
+    left: 2.01rem;
     top: 1.35rem;
     font-size: 0.28rem;
     font-weight: bold;
@@ -479,7 +479,7 @@ html, body {
 }
 
 #page4 div:nth-of-type(2) {
-    left: 2.23rem;
+    left: 2.03rem;
     top: 1.73rem;
     font-size: 0.14rem;
     animation: bounceInDown 1s both;
@@ -488,7 +488,7 @@ html, body {
 }
 
 #page4 div:nth-of-type(3) {
-    left: 1.79rem;
+    left: 1.59rem;
     top: 2.70rem;
     padding: 0.1rem;
     border: 0.02rem solid rgba(0, 0, 0, 0.65);
@@ -498,7 +498,7 @@ html, body {
 }
 
 #page4 div:nth-of-type(4) {
-    left: 1.79rem;
+    left: 1.59rem;
     top: 3.95rem;
     padding: 0.1rem;
     border: 0.02rem solid rgba(0, 0, 0, 0.65);
@@ -508,7 +508,7 @@ html, body {
 }
 
 #page4 div:nth-of-type(5) {
-    left: 1.79rem;
+    left: 1.59rem;
     top: 5.25rem;
     padding: 0.1rem;
     border: 0.02rem solid rgba(0, 0, 0, 0.65);
@@ -524,7 +524,7 @@ html, body {
 #page5 img:nth-of-type(2) {
     width: 1.48rem;
     height: 0.46rem;
-    left: 1.49rem;
+    left: 1.29rem;
     top: 0.78rem;
     animation: bounceInLeft 1s both;
     -webkit-animation: bounceInLeft 1s both;
@@ -533,7 +533,7 @@ html, body {
 #page5 img:nth-of-type(3) {
     width: 1.48rem;
     height: 0.23rem;
-    left: 2.53rem;
+    left: 2.33rem;
     top: 1.52rem;
     animation: bounceInRight 1s both;
     -webkit-animation: bounceInRight 1s both;
@@ -542,7 +542,7 @@ html, body {
 #page5 img:nth-of-type(4) {
     width: 0.83rem;
     height: 0.77rem;
-    left: 2.21rem;
+    left: 2.01rem;
     top: 2.28rem;
     animation: bounceIn 2s 0.4s infinite both;
     -webkit-animation: bounceIn 2s 0.4s infinite both;
@@ -551,7 +551,7 @@ html, body {
 #page5 img:nth-of-type(5) {
     width: 1.22rem;
     height: 1.20rem;
-    left: 3.2rem;
+    left: 3rem;
     top: 2.93rem;
     animation: bounceIn 2s 0.6s infinite both;
     -webkit-animation: bounceIn 2s 0.6s infinite both;
@@ -560,7 +560,7 @@ html, body {
 #page5 img:nth-of-type(6) {
     width: 0.89rem;
     height: 0.86rem;
-    left: 1.65rem;
+    left: 1.45rem;
     top: 3.36rem;
     animation: bounceIn 2s 0.8s infinite both;
     -webkit-animation: bounceIn 2s 0.8s infinite both;
@@ -569,7 +569,7 @@ html, body {
 #page5 img:nth-of-type(7) {
     width: 1.22rem;
     height: 1.20rem;
-    left: 2.67rem;
+    left: 2.47rem;
     top: 4.23rem;
     animation: bounceIn 2s 1s infinite both;
     -webkit-animation: bounceIn 2s 1s infinite both;
@@ -578,7 +578,7 @@ html, body {
 #page5 img:nth-of-type(8) {
     width: 1.22rem;
     height: 1.20rem;
-    left: 0.99rem;
+    left: 0.79rem;
     top: 4.53rem;
     animation: bounceIn 2s 1.2s infinite both;
     -webkit-animation: bounceIn 2s 1.2s infinite both;
@@ -587,14 +587,14 @@ html, body {
 #page5 img:nth-of-type(9) {
     width: 0.83rem;
     height: 0.77rem;
-    left: 2.41rem;
+    left: 2.21rem;
     top: 5.50rem;
     animation: bounceIn 2s 1.4s infinite both;
     -webkit-animation: bounceIn 2s 1.4s infinite both;
 }
 
 #page5 div:nth-of-type(1) {
-    left: 2.07rem;
+    left: 1.87rem;
     top: 1.10rem;
     font-size: 0.28rem;
     font-weight: bold;
@@ -603,7 +603,7 @@ html, body {
 }
 
 #page5 div:nth-of-type(2) {
-    left: 2.1rem;
+    left: 1.9rem;
     top: 1.45rem;
     font-size: 0.14rem;
     animation: fadeIn 0.5s both;
@@ -611,42 +611,42 @@ html, body {
 }
 
 #page5 div:nth-of-type(3) {
-    left: 2.43rem;
+    left: 2.23rem;
     top: 2.48rem;
     font-size: 0.2rem;
     color: #ffffff;
 }
 
 #page5 div:nth-of-type(4) {
-    left: 3.39rem;
+    left: 3.19rem;
     top: 3.35rem;
     font-size: 0.2rem;
     color: #ffffff;
 }
 
 #page5 div:nth-of-type(5) {
-    left: 1.9rem;
+    left: 1.7rem;
     top: 3.62rem;
     font-size: 0.2rem;
     color: #ffffff;
 }
 
 #page5 div:nth-of-type(6) {
-    left: 2.87rem;
+    left: 2.67rem;
     top: 4.66rem;
     font-size: 0.2rem;
     color: #ffffff;
 }
 
 #page5 div:nth-of-type(7) {
-    left: 1.2rem;
+    left: 1rem;
     top: 4.98rem;
     font-size: 0.2rem;
     color: #ffffff;
 }
 
 #page5 div:nth-of-type(8) {
-    left: 2.63rem;
+    left: 2.43rem;
     top: 5.71rem;
     font-size: 0.2rem;
     color: #ffffff;
@@ -659,7 +659,7 @@ html, body {
 #page6 img:nth-of-type(2) {
     width: 1.48rem;
     height: 0.46rem;
-    left: 1.48rem;
+    left: 1.28rem;
     top: 0.78rem;
     animation: bounceInLeft 1s both;
     -webkit-animation: bounceInLeft 1s both;
@@ -668,7 +668,7 @@ html, body {
 #page6 img:nth-of-type(3) {
     width: 1.48rem;
     height: 0.23rem;
-    left: 2.53rem;
+    left: 2.33rem;
     top: 1.60rem;
     animation: bounceInRight 1s both;
     -webkit-animation: bounceInRight 1s both;
@@ -677,14 +677,14 @@ html, body {
 #page6 img:nth-of-type(4) {
     width: 1.50rem;
     height: 1.50rem;
-    left: 2.02rem;
+    left: 1.82rem;
     top: 2.20rem;
     animation: zoomIn 1s both;
     -webkit-animation: zoomIn 1s both;
 }
 
 #page6 div:nth-of-type(1) {
-    left: 2.07rem;
+    left: 1.87rem;
     top: 1.10rem;
     font-size: 0.28rem;
     animation: fadeIn 0.5s both;
@@ -692,7 +692,7 @@ html, body {
 }
 
 #page6 div:nth-of-type(2) {
-    left: 2.1rem;
+    left: 1.9rem;
     top: 1.45rem;
     font-size: 0.14rem;
     animation: fadeIn 0.5s both;
@@ -700,7 +700,7 @@ html, body {
 }
 
 #page6 div:nth-of-type(3) {
-    left: 1.59rem;
+    left: 1.39rem;
     top: 3.88rem;
     font-size: 0.2rem;
     animation: fadeInUpBig 1s 0.3s both;
@@ -708,7 +708,7 @@ html, body {
 }
 
 #page6 div:nth-of-type(4) {
-    left: 1.6rem;
+    left: 1.4rem;
     top: 4.28rem;
     font-size: 0.20rem;
     animation: fadeInUpBig 1s 0.6s both;
@@ -716,7 +716,7 @@ html, body {
 }
 
 #page6 div:nth-of-type(5) {
-    left: 1.71rem;
+    left: 1.51rem;
     top: 4.70rem;
     font-size: 0.2rem;
     animation: fadeInUpBig 1s 0.9s both;
