--- a/css/index.css
+++ b/css/index.css
@@ -57,7 +57,7 @@ html, body {
 .swiper-slide {
     position: relative;
     background: url("../img/o_1amauma3ck4l1lv063b1uqt1f8q9.jpg");
-    background-size: cover;
+    -webkit-background-size: cover;
     width: 100%;
     height: 100%;
 }
@@ -77,7 +77,7 @@ html, body {
     top: 0;
     opacity: 1;
     background: url("../img/o_1amb85hhh1rhm163tetd72at1n4e.png") ;
-    background-size: cover;
+    -webkit-background-size: cover;
 }
 
 /*第一屏*/
