--- a/css/index.css
+++ b/css/index.css
@@ -56,8 +56,8 @@ html, body {
 
 .swiper-slide {
     position: relative;
-    background: url("../img/o_1amauma3ck4l1lv063b1uqt1f8q9.jpg");
-    background-size: cover;
+    background: url("../img/o-back-img.jpg");
+    -webkit-background-size: cover;
     width: 100%;
     height: 100%;
 }
@@ -75,9 +75,6 @@ html, body {
     height: 100%;
     left: 0;
     top: 0;
-    opacity: 1;
-    background: url("../img/o_1amb85hhh1rhm163tetd72at1n4e.png") ;
-    background-size: cover;
 }
 
 /*第一屏*/
